
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int std; scalar_t__ age; int str; scalar_t__ valid; } ;
typedef TYPE_1__ DCHCacheEntry ;


 TYPE_1__** DCHCache ;
 scalar_t__ DCHCounter ;
 int DCH_prevent_counter_overflow () ;
 int n_DCHCache ;
 scalar_t__ strcmp (int ,char const*) ;

__attribute__((used)) static DCHCacheEntry *
DCH_cache_search(const char *str, bool std)
{

 DCH_prevent_counter_overflow();

 for (int i = 0; i < n_DCHCache; i++)
 {
  DCHCacheEntry *ent = DCHCache[i];

  if (ent->valid && strcmp(ent->str, str) == 0 && ent->std == std)
  {
   ent->age = (++DCHCounter);
   return ent;
  }
 }

 return ((void*)0);
}
